# Assignment2_task3_ADL4IP

./: README.md
Task3/PyTorch-YOLOv3/: .gitignore  pyproject.toml  requirements.txt
Task3/PyTorch-YOLOv3/config/: custom.data  yolov3-custom.cfg
Task3/PyTorch-YOLOv3/data/custom/: test.txt  train.txt  valid.txt
Task3/PyTorch-YOLOv3/data/custom/labels/: IMG_2274_jpeg_jpg.rf.93849eec0c7feb9ec1132d4efea68d28.txt  IMG_2275_jpeg_jpg.rf.302b09e56e77d9362a82af80549966ab.txt  IMG_2276_jpeg_jpg.rf.20da1b418068b3190cb169ffaf7e99e0.txt  IMG_2277_jpeg_jpg.rf.f903f00469f03293fecb61c7f1f61aec.txt  IMG_2278_jpeg_jpg.rf.75fc3878ac9548eca3fe77cffe8f0a36.txt  IMG_2279_jpeg_jpg.rf.2fd699c5499b635c0c28001a88ca8c21.txt  IMG_2280_jpeg_jpg.rf.2db8c55e574aa8bdd962579996c152c5.txt  IMG_2282_jpeg_jpg.rf.c20fdb9c3b47e8ff2d77873fd70c7336.txt  IMG_2283_jpeg_jpg.rf.3bfa46d067df00ade4d157329abfd3d1.txt  IMG_2284_jpeg_jpg.rf.cb70f61699bb128a638bc8a9c1d2b041.txt  IMG_2285_jpeg_jpg.rf.0bdd0c252e67a428fee9c988c6fb10a3.txt  IMG_2286_jpeg_jpg.rf.7af790ea07c3fb5c4c764693ee565f05.txt  IMG_2287_jpeg_jpg.rf.65a773e4fc25d0585945dfc927cf8008.txt  IMG_2289_jpeg_jpg.rf.b277c327178d3f2c9299de48b66e7c7a.txt  IMG_2290_jpeg_jpg.rf.28797e9ba60e147537381144b92ea41d.txt  IMG_2291_jpeg_jpg.rf.48f2d59f1f5c9df91249b419b862fc1a.txt  IMG_2292_jpeg_jpg.rf.c52ce21bc57a358e2e98f688730febb5.txt  IMG_2293_jpeg_jpg.rf.28ae1cd63f7a8fddf0e1a75b0cdf3da2.txt  IMG_2294_jpeg_jpg.rf.17c473b54c8b8f3fbcaae03061955a17.txt  (+607 more)
Task3/PyTorch-YOLOv3/output/: map_by_epoch.csv  training_log.txt
Task3/PyTorch-YOLOv3/pytorchyolo/: train.py
(+6 files in other folders)
