[tool.poetry]
name = "PyTorchYolo"
version = "1.8.0"
readme = "README.md"
repository = "https://github.com/eriklindernoren/PyTorch-YOLOv3"
description = "Minimal PyTorch implementation of YOLO"
authors = ["Florian Vahl <git@flova.de>", "Erik Linder-Noren <eriklindernoren@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
torch = ">=2.1,<2.8"
torchvision = ">=0.16,<0.23"
matplotlib = "^3.7"
tensorboard = "^2.14"
terminaltables = "^3.1.0"
Pillow = ">=9.1,<11.0"
tqdm = "^4.64.1"
urllib3 = ">=1.26,<3"
scipy = "^1.11"
imgaug = "^0.4.0"
torchsummary = "^1.5.1"
numpy = ">=1.23.4,<2.0"  # held <2.0: imgaug 0.4.0 uses removed numpy aliases

[tool.poetry.dev-dependencies]
profilehooks = "^1.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yolo-detect = "pytorchyolo.detect:run"
yolo-train = "pytorchyolo.train:run"
yolo-test = "pytorchyolo.test:run"
